<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.DetailActivity">


    <ImageView
        android:id="@+id/card_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_cover"
        />

    <TextView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/movie_text"
        android:textSize="30sp"
        android:lines="2"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/card_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/release_date"
        android:textSize="20sp"
        android:lines="1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/card_vote_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/vote_average"
        android:textSize="20sp"
        android:lines="1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:layout_margin="10dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textSize="17sp"
        />

</LinearLayout>